styles/flex.sass
.d-flex
  display: flex !important

.flex-column
  flex-direction: column

.align-items-center
  align-items: center

.justify-content-between
  justify-content: space-between

.align-self-end
  align-self: flex-end

.flex-1
  flex: 1
  min-height: 0
  min-width: 0
  flex-basis: 0

.flex-0
  flex-grow: 0
  flex-shrink: 1
  min-height: 0
  min-width: 0

